<resources>
    <string name="app_name">GithubMaster</string>
    <string name="activity_user">UserActivity</string>

    <string name="bottom_bar_feed">Feed</string>
    <string name="bottom_bar_trending">Trending</string>
    <string name="bottom_bar_user">User</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_username_password">This username and password are incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="sign_in">Sign in</string>

    <string name="menu_search">search</string>
    <string name="menu_notifications">notifications</string>
    <string name="menu_sort">sort</string>
    <string name="menu_refresh">refresh</string>
    <string name="github_login">Github login</string>
    <string name="user_resume_contributions">Contributions</string>

    <!--Contributions-->
    <string name="one_year_total">1 year total</string>
    <string name="busiest_day">Busiest day</string>
    <string name="longest_streak">Longest streak</string>
    <string name="no_contributions_this_year">No contributions this year</string>
    <string name="last_contributed">Last contributed&#160;</string>
    <string name="days_ago">&#160;days ago</string>
    <string name="day_ago">&#160;day ago</string>
    <string name="current_streak">Current streak</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="contributions">contributions</string>
    <string name="contribution">contribution</string>
    <string name="remark_to">&#160;-&#160;</string>
    <string name="click_to_set">Click to set user name</string>
    <string name="one_year">1 Year</string>
    <string name="today">Today</string>
    <string name="current">Days</string>
    <string name="followers">Followers</string>
    <string name="stars">Stars</string>
</resources>

