<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_notifications_white_48dp"
        android:title="@string/menu_notifications"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_48dp"
        android:title="@string/menu_sort"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_48dp"
        android:title="@string/menu_refresh"
        app:showAsAction="never"/>

</menu>