<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".mvp.ui.activity.LoginActivity"
    >

  <!-- Login progress -->
  <ProgressBar
      android:id="@+id/login_pb"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:visibility="gone"
      style="?android:attr/progressBarStyleLarge"
      />

  <android.support.v4.widget.NestedScrollView
      android:id="@+id/login_form"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:scrollbars="vertical"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        >

      <ImageView
          android:id="@+id/login_iv_github"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="20dp"
          android:layout_marginTop="50dp"
          android:src="@drawable/github_icon"
          />

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <EditText
            android:id="@+id/login_tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_launcher"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/prompt_username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <EditText
            android:id="@+id/login_tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_launcher"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            />

      </android.support.design.widget.TextInputLayout>

      <CheckBox
          android:layout_marginLeft="@dimen/activity_horizontal_margin"
          android:text="记住密码"
          android:paddingLeft="@dimen/activity_horizontal_margin"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          />

      <Button
          android:id="@+id/login_btn_sign_in"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:text="@string/action_sign_in"
          android:textStyle="bold"
          style="?android:textAppearanceSmall"
          />

    </LinearLayout>
  </android.support.v4.widget.NestedScrollView>
</LinearLayout>
